# pydmdstats

./: .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-package.yml  test.yml
experiments/: varprodmd_3dcfd.py  varprodmd_mrse_performance.py  varprodmd_ssim_performance.py
experiments/util/: convert2vorticity.py  pdebench_data_download.py
output/: MRSE_highdim_100.pkl  SSIM_complex2d_100.pkl  SSIM_global_temp_100.pkl  SSIM_moving_points_100.pkl
output/lm/: SSIM_complex2d_100_linear_inv_jac_scale.pkl  SSIM_moving_points_100_linear.pkl
output/trf/: MRSE_highdim_100_linear.pkl  MRSE_highdim_100_linear_inv_jac_scale.pkl  MRSE_highdim_100_soft_l1_inv_jac_scale.pkl  SSIM_complex2d_100_huber.pkl  SSIM_complex2d_100_huber_inv_jac_scale.pkl  SSIM_complex2d_100_linear.pkl  SSIM_complex2d_100_linear_inv_jac_scale.pkl  SSIM_complex2d_100_soft_l1.pkl  SSIM_complex2d_100_soft_l1_inv_jac_scale.pkl  SSIM_global_temp_100_soft_l1.pkl  SSIM_moving_points_100_huber.pkl  SSIM_moving_points_100_huber_inv_jac_scale.pkl  SSIM_moving_points_100_linear.pkl  SSIM_moving_points_100_linear_inv_jac_scale.pkl  SSIM_moving_points_100_soft_l1.pkl  SSIM_moving_points_100_soft_l1_inv_jac_scale.pkl
scripts/: varprodmd_mrse_performance.py  varprodmd_ssim_performance.py  visualize_complex2d.py  visualize_global_temp.py  visualize_results.py
scripts/util/: __init__.py  experiment_utils.py  stats.py
tests/: test_ortho.py  test_ssim.py  test_stats.py  test_vorticity.py
varprodmdstatspy/: __init__.py  varprodmd_mrse_performance.py  varprodmd_ssim_performance.py  visualize_complex2d.py  visualize_global_temp.py  visualize_highdim_selection.py  visualize_moving_points.py  visualize_results.py
varprodmdstatspy/util/: __init__.py  experiment_utils.py  stats.py  vorticity.py
visualization/: visualize_3dcfd.py  visualize_3dcfd_results.py  visualize_3dcfd_volume.py  visualize_complex2d.py  visualize_global_temp.py  visualize_highdim_selection.py  visualize_moving_points.py  visualize_results.py
