[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydmdstats"
version = "0.1.0"
requires-python = ">=3.8, <3.12"
description = "VarProDMD stats vs BOPDMD"
license = {file="LICENSE"}
authors = [
  { name = "Gerhard Reinerth", email = "g.reinerth@tum.de" }
]


readme = "README.md"
keywords = ["python", "dynamic mode decomposition", "variable projection"]

classifiers = [
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21.4",
    "scipy>=1.9.3",
    "sympy>=1.8",
    "pydmd",
    "scikit-image",
    "seaborn",
    "netCDF4",
    "colorama",
    "wget"
]

[tool.hatch.build]
include = [
  "varprodmdstatspy"
]

[project.optional-dependencies]
dev = ["anybadge",
       "ruff",
       "pytest",
       "pytest-coverage",
       "pytest-mypy",
       "hatchling",
       "memray"]

[project.scripts]
run_ssim = "varprodmdstatspy.varprodmd_ssim_performance:run_ssim"
run_mrse = "varprodmdstatspy.varprodmd_mrse_performance:run_mrse"
visualize_stats = "varprodmdstatspy.visualize_results:visualize_stats"
